2003-08-27  David Byers  <davby@ida.liu.se>

	* utilities.el (lyskom-completing-read): Protect the value of
	this-command from alteration.
	(lyskom-read-from-minibuffer): Same here.

2003-08-26  David Byers  <byers@lysator.liu.se>

	* utilities.el (lyskom-magic-minibuffer-mangle-initial):
	Explicitly make properties at the front of the initial value
	nonsticky (mainly for XEmacs where they are sticky by default).
	(completing-read): Add explicity uses for all variables to avoid
	compiler warnings in XEmacs at run time.
	(read-from-minibuffer): Same.

	* commands2.el (kom-send-message): Remoed unused variables.

2003-08-25  David Byers  <byers@lysator.liu.se>

	* vars.el.in (lyskom-error-codes): Added error codes 55-61.

	* english-strings.el,swedish-strings.el: Added error codes 55-61.

	* startup.el (kom-start-anew): Use lyskom-default-language instead
	of kom-default-language to set the initial language for the
	session.

	* lyskom-rest.el (lyskom-is-loaded): Changed initialization of
	language variables to use new function in language.el. Also do not
	alter kom-default-language unless it was nil to begin with.
	Convert kom-default-language from symbol to list if necessary.

	* language.el (lyskom-language-from-environment): Moved here from
	lyskom-rest.el.
	(lyskom-default-language): New function.

	* completing-read.el (lyskom-read-conf-internal): We use
	uconf-stats internally, so don't use conf-stat accessors.

2003-08-25  David Byers  <davby@ida.liu.se>

	Fix problems entering conferences in the edit buffer:
	* completing-read.el (lyskom-default-conference-saved): Read the
	value of lyskom-read-conf-saved-inputs in the LysKOM buffer.
	(lyskom-read-conf-save-input): Same here.
	(lyskom-get-initial-conf-strategy): Print warning about missing
	strategy in LysKOM buffer.

	* vars.el.in (lyskom-read-conf-saved-inputs): Moved here from
	completing-read.el and made it buffer-local.

	* completing-read.el (lyskom-read-conf): Create dynamic binding of